[package]
name = "recap"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1.1"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.3"
recap-derive = { version = "0.1.0", path = "../recap-derive", optional = true }

[features]
default = ["derive"]
derive = ["recap-derive"]