[package]
name = "recap"
version = "0.1.2"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Deserialize typed structures from regex captures"
keywords = ["regex", "serde"]
readme = "../README.md"
documentation = "https://docs.rs/recap"
homepage = "https://github.com/softprops/recap"
repository = "https://github.com/softprops/recap"

[badges]
coveralls = { repository = "softprops/recap" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "softprops/recap" }

[dependencies]
envy = "0.4"
lazy_static = "1.3"
recap-derive = { version = "0.1.2", path = "../recap-derive", optional = true }
regex = "1.2"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["derive"]
derive = ["recap-derive"]